--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ openai = "^1.35.5"
 pillow = "^10.4.0"
 urljoin = "^1.0.0"
 pinecone-client = "^5.0.1"
-numpy = "^2.0.1"
+numpy = ">=1"
 
 
 [build-system]
